--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "image-downloader": "^4.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.6"
   }
 }
