--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,6 @@
 MONGO_URL='mongodb+srv://bindashish343:6dglnkOZ7L0knBXX@cluster0.uket0aa.mongodb.net/'
+EMAIL=skillcraft811@gmail.com
+PASSWORD=zygipefveltleinl
+JWT_SECRET='asfhxi1o2j2dsgnk24jaj7dfs12'
+NODEMAILER_USER= '666e7dd8d7f675'
+NODEMAILER_PASS= 'b5e636d1a8c0a6'
