--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Logs
 logs
 *.log
+*.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -9,7 +10,6 @@ lerna-debug.log*
 
 client/node_modules
 client/.eslintrc.cjs
-client/.env
 server/node_modules
 server/uploads
 dist
